# flintpy

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.rst  README.md  SECURITY.md  noxfile.py  pyproject.toml  tasks.py
.github/workflows/: codeql-analysis.yml  pre-commit-autoupdate.yml  release.yml  tests.yml
.jupyter/: jupyter_lab_config.py
docs/: conf.py  index.rst  installation.rst  requirements.txt  usage.rst
notebooks/: demo_1d_data.ipynb  demo_2d_data.ipynb
src/flintpy/: __init__.py  flintpy.py  kernels.py  plotting.py  utils.py
templates/experiments/: Sample.ipynb
tests/: __init__.py  test_flintpy.py
